# DeepGlobeClassification

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
configs/: config.py  config_color_dict.py  config_train.py
data/: data_download.py
dataLoader/: data_loader.py  data_module.py
mlartifacts/0/3eb86930747c467fb2e32676d4fee57c/artifacts/model/: MLmodel  conda.yaml
mlartifacts/0/670e25c061ea44cf8343d621935ad6f4/artifacts/model/: MLmodel
mlartifacts/0/812d56acdaa346b89baf1b65bb0753ff/artifacts/model/: MLmodel
mlartifacts/0/82c63b8bb613484fb3f600524df936ac/artifacts/: model_summary.txt
mlartifacts/0/82c63b8bb613484fb3f600524df936ac/artifacts/model/: MLmodel  python_env.yaml  requirements.txt
src/CustomUnetNN/: fine_tune_model.py  segmentation_module.py  train.py  unet_nn.py
src/CustomUnetNN/lightning_logs/landcover-classification-log/version_0/: events.out.tfevents.1695072669.elof.32655.0
src/CustomUnetNN/lightning_logs/landcover-classification-log/version_1/: events.out.tfevents.1695072991.elof.5742.0
src/Production/: predict.py
trainNN/CustomUnetNN/: unet_nn.py
