[tool.poetry]
name = "dlglclassification"
version = "0.1.0"
description = ""
authors = ["Eloof <t.vlasov23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.16"
torch = "1.13.0"
pandas = "^2.1.0"
torchvision = "0.14.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.3"
opencv-python = "^4.8.0.76"
torchsummary = "^1.5.1"
pytorch-lightning = "^2.0.8"
segmentation-models-pytorch = "^0.3.3"
torchmetrics = "^1.1.2"
mlflow = "^2.7.0"
pylint = "^2.17.5"
mypy = "^1.5.1"
tensorboard = "^2.14.0"
tensorboardx = "^2.6.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
